<resources>
    <string name="app_name">Savour</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Need to sign up? Click here!</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="reset_pass">Send Reset Email</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="facebook_app_id">127494581197194</string>
    <string name="fb_login_protocol_scheme">fb127494581197194</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vendorimg">vendorImg</string>
    <string name="deal_inactive">Deal Inactive</string>
    <string name="deal_image">Deal Image</string>
    <string name="tag_string_com_facebook_image_download_unknown_error">tag @string/com_facebook_image_download_unknown_error</string>
    <string name="favorite_string_deal_image">favorite @string/deal_image</string>
    <string name="deal_img">deal_img</string>
    <string name="invitation_deep_link_kotlin">https://savourdeals.page.link/getsavour</string>
    <string name="IOS_CIENT_ID">165647122349-mk0mjtmkclnsk6cgn53i4qef69kboek5.apps.googleusercontent.com</string>
    <string name="invitation_message">Check out Savour to get deals from local restaurants!</string>
    <string name="invitation_title">Savour Deals</string>
    <string name="invitation_cta">Download Now!</string>
    <string name="terms_text">For dine in and carry out only. Not redeemable with any other promotions unless otherwise mentioned. This deal is only valid for one person. BOGO free items are for equal or lesser value. This deal has no cash value. You must be 21+ to redeem any alcohol deals.</string>
    <string name="title_activity_maps">Map</string>
</resources>
